Adding keywords to papers

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -130,14 +130,16 @@
 	year = {2002},
 	bdsk-url-1 = {https://doi.org/10.1109/MCOM.2002.1106162}}
 
-@article{Barboza2000,
-	author = {David Barboza},
-	city = {New York},
-	journal = {The New York Times},
-	month = {4},
-	pages = {1-1},
-	title = {Iridium, Bankrupt, Is Planning a Fiery Ending for Its 88 Satellites},
-	year = {2000}}
+@Article{Barboza2000,
+  author   = {David Barboza},
+  journal  = {The New York Times},
+  title    = {Iridium, Bankrupt, Is Planning a Fiery Ending for Its 88 Satellites},
+  year     = {2000},
+  month    = {4},
+  pages    = {1-1},
+  city     = {New York},
+  keywords = {Iridium},
+}
 
 @article{Chan2002,
 	author = {Sharon Pian Chan},
@@ -147,28 +149,32 @@
 	title = {The birth and demise of an idea: Teledesic's 'Internet in the sky'},
 	year = {2002}}
 
-@misc{N2YO2024,
-	author = {N2YO},
-	note = {[Online; accessed April 18, 2024]},
-	title = {Live Real Time Satellite Tracking and Predictions},
-	url = {https://www.n2yo.com/},
-	year = {2024},
-	bdsk-url-1 = {https://www.n2yo.com/}}
+@Misc{N2YO2024,
+  author     = {N2YO},
+  note       = {[Online; accessed April 18, 2024]},
+  title      = {Live Real Time Satellite Tracking and Predictions},
+  year       = {2024},
+  bdsk-url-1 = {https://www.n2yo.com/},
+  keywords   = {Satellites,Constellations},
+  url        = {https://www.n2yo.com/},
+}
 
-@inproceedings{DBLP:conf/imc/MichelTGB22,
-	author = {Fran{\c{c}}ois Michel and Martino Trevisan and Danilo Giordano and Olivier Bonaventure},
-	bibsource = {dblp computer science bibliography, https://dblp.org},
-	biburl = {https://dblp.org/rec/conf/imc/MichelTGB22.bib},
-	booktitle = {Proceedings of the 22nd {ACM} Internet Measurement Conference, { IMC} 2022, Nice, France, October 25-27, 2022},
-	doi = {10.1145/3517745.3561416},
-	editor = {Chadi Barakat and Cristel Pelsser and Theophilus A. Benson and David R. Choffnes},
-	pages = {130--136},
-	publisher = {{ACM}},
-	timestamp = {Mon, 06 Feb 2023 21:45:20 +0100},
-	title = {A first look at starlink performance},
-	url = {https://doi.org/10.1145/3517745.3561416},
-	year = {2022},
-	bdsk-url-1 = {https://doi.org/10.1145/3517745.3561416}}
+@InProceedings{DBLP:conf/imc/MichelTGB22,
+  author     = {Fran{\c{c}}ois Michel and Martino Trevisan and Danilo Giordano and Olivier Bonaventure},
+  booktitle  = {Proceedings of the 22nd {ACM} Internet Measurement Conference, { IMC} 2022, Nice, France, October 25-27, 2022},
+  title      = {A first look at starlink performance},
+  year       = {2022},
+  editor     = {Chadi Barakat and Cristel Pelsser and Theophilus A. Benson and David R. Choffnes},
+  pages      = {130--136},
+  publisher  = {{ACM}},
+  bdsk-url-1 = {https://doi.org/10.1145/3517745.3561416},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/conf/imc/MichelTGB22.bib},
+  doi        = {10.1145/3517745.3561416},
+  keywords   = {Starlink,Performance,LEO},
+  timestamp  = {Mon, 06 Feb 2023 21:45:20 +0100},
+  url        = {https://doi.org/10.1145/3517745.3561416},
+}
 
 @InProceedings{DBLP:conf/infocom/MaCZCML23,
   author     = {Sami Ma and Yi Ching Chou and Haoyuan Zhao and Long Chen and Xiaoqiang Ma and Jiangchuan Liu},
@@ -187,38 +193,44 @@
   url        = {https://doi.org/10.1109/INFOCOM53939.2023.10228912},
 }
 
-@article{DBLP:journals/corr/abs-2403-13497,
-	author = {Dominic Laniewski and Eric Lanfer and Simon Beginn and Jan Dunker and Michael D{\"{u}}ckers and Nils Aschenbruck},
-	bibsource = {dblp computer science bibliography, https://dblp.org},
-	biburl = {https://dblp.org/rec/journals/corr/abs-2403-13497.bib},
-	doi = {10.48550/ARXIV.2403.13497},
-	eprint = {2403.13497},
-	eprinttype = {arXiv},
-	journal = {CoRR},
-	timestamp = {Mon, 08 Apr 2024 18:24:51 +0200},
-	title = {Starlink on the Road: {A} First Look at Mobile Starlink Performance in Central Europe},
-	url = {https://doi.org/10.48550/arXiv.2403.13497},
-	volume = {abs/2403.13497},
-	year = {2024},
-	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2403.13497}}
+@Article{DBLP:journals/corr/abs-2403-13497,
+  author     = {Dominic Laniewski and Eric Lanfer and Simon Beginn and Jan Dunker and Michael D{\"{u}}ckers and Nils Aschenbruck},
+  journal    = {CoRR},
+  title      = {Starlink on the Road: {A} First Look at Mobile Starlink Performance in Central Europe},
+  year       = {2024},
+  volume     = {abs/2403.13497},
+  bdsk-url-1 = {https://doi.org/10.48550/arXiv.2403.13497},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-2403-13497.bib},
+  doi        = {10.48550/ARXIV.2403.13497},
+  eprint     = {2403.13497},
+  eprinttype = {arXiv},
+  keywords   = {Starlink,Movement,Throughput,One-Hop-Bent Pipe},
+  timestamp  = {Mon, 08 Apr 2024 18:24:51 +0200},
+  url        = {https://doi.org/10.48550/arXiv.2403.13497},
+}
 
-@misc{QuarkslabsBlogUserTerminalFirmsware,
-	author = {Carlo Ramponi},
-	month = {8},
-	note = {[Online; accessed April 18, 2024]},
-	title = {Diving into Starlink's User Terminal Firmware},
-	url = {https://blog.quarkslab.com/starlink.html},
-	year = {2023},
-	bdsk-url-1 = {https://blog.quarkslab.com/starlink.html}}
+@Misc{QuarkslabsBlogUserTerminalFirmsware,
+  author     = {Carlo Ramponi},
+  month      = {8},
+  note       = {[Online; accessed April 18, 2024]},
+  title      = {Diving into Starlink's User Terminal Firmware},
+  year       = {2023},
+  bdsk-url-1 = {https://blog.quarkslab.com/starlink.html},
+  keywords   = {Starlink,Firmware},
+  url        = {https://blog.quarkslab.com/starlink.html},
+}
 
-@misc{WoutersDumpingUserTerminalFirmware,
-	author = {Lennert Wouters},
-	month = {7},
-	note = {[Online; accessed April 18, 2024]},
-	title = {Dumping and extracting the SpaceX Starlink User Terminal firmware},
-	url = {https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/},
-	year = {2021},
-	bdsk-url-1 = {https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/}}
+@Misc{WoutersDumpingUserTerminalFirmware,
+  author     = {Lennert Wouters},
+  month      = {7},
+  note       = {[Online; accessed April 18, 2024]},
+  title      = {Dumping and extracting the SpaceX Starlink User Terminal firmware},
+  year       = {2021},
+  bdsk-url-1 = {https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/},
+  keywords   = {Starlink,Firmware},
+  url        = {https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/},
+}
 
 @Article{Hauri2020,
   author     = {Yannick Hauri and Debopam Bhattacherjee and Manuel Grossmann and Ankit Singla},
