--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -293,4 +293,19 @@
   url       = {https://doi.org/10.1145/3419394.3423635},
 }
 
+@InProceedings{DBLP:conf/leo-net/0001SCB23,
+  author    = {Johan Garcia and Simon Sundberg and Giuseppe Caso and Anna Brunstr{\"{o}}m},
+  booktitle = {Proceedings of the 1st {ACM} Workshop on {LEO} Networking and Communication, {LEO-NET} 2023, Madrid, Spain, 6 October 2023},
+  title     = {Multi-Timescale Evaluation of Starlink Throughput},
+  year      = {2023},
+  pages     = {31--36},
+  publisher = {{ACM}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/leo-net/0001SCB23.bib},
+  doi       = {10.1145/3614204.3616108},
+  keywords  = {Starlink,LEO,15s interval,Throughput,Diurnal Variation,7.2s drop,Underutilization of Thrughput},
+  timestamp = {Sun, 24 Sep 2023 15:46:38 +0200},
+  url       = {https://doi.org/10.1145/3614204.3616108},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
