Adding document settings

--- a/thesis/core/preamble/document_settings.tex
+++ b/thesis/core/preamble/document_settings.tex
@@ -17,37 +17,37 @@
 % The following commands define certain strings that provide important information for the document.
 
 % The title of the thesis.
-\newcommand*{\printTitle}{}
-\newcommand*{\printGermanTitle}{}
+\newcommand*{\printTitle}{Evaluating Resiliency and Performance of Networked Satellite Systems}
+\newcommand*{\printGermanTitle}{Evaluierung der Resilienz und Leistung von vernetzten Satelliten Systemen}
 \newcommand*{\myTitle}[2]{\renewcommand*{\printTitle}{#1}\renewcommand*{\printGermanTitle}{#2}}
 \newcommand*{\printTitleBold}{\textbf{\printTitle}}
 
 % The author’s name.
-\newcommand*{\printAuthor}{}
+\newcommand*{\printAuthor}{Robert Alexander Uwe Richter}
 \newcommand*{\myName}[1]{\renewcommand*{\printAuthor}{#1}}
 
 % The name of the author’s program.
-\newcommand*{\printProgram}{}
+\newcommand*{\printProgram}{IT-Systems Engineering}
 \newcommand*{\myProgram}[1]{\renewcommand*{\printProgram}{#1}}
 
 % The date when the thesis was handed in.
-\newcommand*{\printDateReceived}{}
+\newcommand*{\printDateReceived}{11.11.2024}
 \newcommand*{\dateOfHandingIn}[1]{\renewcommand*{\printDateReceived}{#1}}
 
 % A short description of the topic of the thesis. This string will be used for the PDF metadata.
-\newcommand*{\printSubject}{}
+\newcommand*{\printSubject}{The thesis evaluates modern networked satellite systems, e.g., Starlink or OneWeb, to evaluate for properties like latency, privacy, resilience, and performance.}
 \newcommand*{\mySubject}[1]{\renewcommand*{\printSubject}{#1}}
 
 % A short description of the topic of the thesis. This string will be used for the PDF metadata.
-\newcommand*{\printKeywords}{}
+\newcommand*{\printKeywords}{Satellites, LEO, Starlink, OneWeb, Routing, Latency, Privacy, Resilience, Performance}
 \newcommand*{\myKeywords}[1]{\renewcommand*{\printKeywords}{#1}}
 
 % The name of the author’s supervisor.
-\newcommand*{\printNameOfSupervisor}{}
+\newcommand*{\printNameOfSupervisor}{Prof. Dr. Vaibhav Bajpai}
 \newcommand*{\nameOfMySupervisor}[1]{\renewcommand*{\printNameOfSupervisor}{#1}}
 
 % The list with the name of the additional examiners.
-\newcommand*{\printAdditionalExaminers}{}
+\newcommand*{\printAdditionalExaminers}{Prof. Dr. Tilmann Rabl, Dr. Vasilis Ververis}
 \newcommand*{\additionalExaminers}[1]{\renewcommand*{\printAdditionalExaminers}{#1}}
 
 % Defines the extra length added to each side for the print version.
