--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -35,7 +35,7 @@
 %    \boldNumberSetsfalse % Use this value if you want variables for number sets (like N or R) to appear in blackboard bold rather than bold.
 
     % The title of the thesis. The first argument is for the English name, the second is for the German name.
-    \myTitle{Evaluating Resiliency and Performance of Networked Satellite Systems}{Evaluierung der Resilienz und Leistung von Netzwerk Satelliten Systemen}
+    \myTitle{Evaluating Resiliency and Performance of Networked Satellite Systems}{Evaluierung der Resilienz und Leistung von vernetzten Satelliten Systemen}
 
     % The author’s name.
     \myName{Robert Alexander Uwe Richter}
@@ -44,19 +44,19 @@
     \myProgram{IT Systems Engineering}
 
     % The date when the thesis will be handed in.
-    \dateOfHandingIn{30. September 2024}
+    \dateOfHandingIn{11. November 2024}
 
      % The name and affiliation of the author’s supervisor.
-    \nameOfMySupervisor{Prof.\,Dr. Vaibhav Bajpai}
+    \nameOfMySupervisor{Prof.\,Dr. Vaibhav Bajpai \newline Prof. Dr. Tilmann Rabl}
 
     % A list with the names of the additional examiners.
-    \additionalExaminers{A Postdoc\newline A PhD student}
+    \additionalExaminers{Dr. Vasilis Ververis}
 
     % A short summary of the thesis. These information will be used for the PDF meta data.
-    \mySubject{A master's thesis at the Hasso Plattner Institute about Starlink's networking properties.}
+    \mySubject{The thesis evaluates modern networked satellite systems, e.g., Starlink or OneWeb, to evaluate for properties like latency, privacy, resilience, and performance.}
 
     % Some keywords of the thesis. These information will be used for the PDF meta data. Please use | as a separator and try to avoid commas.
-\myKeywords{Master Thesis | Starlink | SpaceX | Satellite Web | Data-Intensive Internet Computing}
+\myKeywords{Master Thesis | Starlink | SpaceX | Satellite Web | Data-Intensive Internet Computing | Privacy | Resilience | Performance}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% End of options to adjust. %%%%%%%%%
