Notes from analysis

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -308,4 +308,46 @@
   url       = {https://doi.org/10.1145/3614204.3616108},
 }
 
+@Article{Brownlee2021,
+  author   = {Nevil Brownlee},
+  journal  = {RIPE Labs},
+  title    = {Exploring RIPE Atlas Traceroutes from 2012 to 2019},
+  year     = {2021},
+  month    = aug,
+  keywords = {Traceroutes, Root Server Differences, Time Series},
+  ranking  = {rank4},
+}
+
+@InProceedings{DBLP:conf/iotbd/ShortenKR24,
+  author    = {David Peter Shorten and Wathsala Karunarathne and Matthew Roughan},
+  booktitle = {Proceedings of the 9th International Conference on Internet of Things, Big Data and Security, IoTBDS 2024, Angers, France, April 28-30, 2024},
+  title     = {How Is Starlink Manoeuvring? An Analysis of Patterns in the Manoeuvres of Starlink Satellites},
+  year      = {2024},
+  editor    = {Anna Kobusinska and Andreas Jacobsson and Victor Chang},
+  pages     = {174--184},
+  publisher = {{SCITEPRESS}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/iotbd/ShortenKR24.bib},
+  doi       = {10.5220/0012619900003705},
+  keywords  = {Starlink,Satellite Altitude,Shells,Collision Avoidance,Altitude Keeping Maneuvers},
+  timestamp = {Wed, 29 May 2024 17:00:02 +0200},
+  url       = {https://doi.org/10.5220/0012619900003705},
+}
+
+@Article{DBLP:journals/pacmnet/RamanVCSZ23,
+  author    = {Aravindh Raman and Matteo Varvello and Hyunseok Chang and Nishanth Sastry and Yasir Zaki},
+  journal   = {{PACMNET}},
+  title     = {Dissecting the Performance of Satellite Network Operators},
+  year      = {2023},
+  number    = {CoNEXT3},
+  pages     = {15:1--15:25},
+  volume    = {1},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/pacmnet/RamanVCSZ23.bib},
+  doi       = {10.1145/3629137},
+  keywords  = {Starlink,HughesNet,ViaSat,LEO vs GEO,TCP,Traceroute,Philippines,Peering with ISP},
+  timestamp = {Sun, 10 Dec 2023 17:01:19 +0100},
+  url       = {https://doi.org/10.1145/3629137},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
