--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -101,9 +101,7 @@
 %% Please add the content of your thesis here. %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{./chapters/networking_technologies/networking_technologies.tex}
-\input{./chapters/networking_technologies/traditional/description.tex}
-\input{./chapters/networking_technologies/satcom/description.tex}
+\input{./chapters/satellite_network_simulators.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% End of adding your content. %%
@@ -126,6 +124,7 @@
 \printbibheading
 \addcontentsline{toc}{chapter}{Bibliography}
 \printbibliography[heading = none]
+\input{acronyms}
 
 \addchap{Declaration of Authorship}
 \input{core/declaration_of_authorship/declaration_of_authorship}
