Adding chapter an traceroute analysis

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -101,7 +101,7 @@
 %% Please add the content of your thesis here. %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{./chapters/satellite_network_simulators.tex}
+\input{./content.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% End of adding your content. %%
