--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -3,8 +3,11 @@
 \begin{acronym}
 	\acro{ISLs}{Inter-Satellite Links}
 	\acro{ISL}{Inter-Satellite Link}
+	\acro{ISP}{Internet Service Provider}
 	\acro{FTTH}{Fiber-to-the-home}
 	\acro{LEO}{Low-Earth~Orbit}
 	\acro{GEO}{Geostationary~Orbit}
 	\acro{RTT}{Round-Trip-Time}
+	\acro{ASN}{Autonomous System Number}
+	\acro{PoP}{Point~of~Presence}
 \end{acronym}
