Added Graphics for Packet Loss Visualization

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -25,6 +25,10 @@
 %	- Routing with Starlink
 %	- TODO(robert): What more?
 
+% Latency
+\input{./chapters/latency/complete_time_range_2022to2024.tex}
+
+% Routing
 \input{./chapters/starlink_traceroutes.tex}
 
 % Limitations and Future Work
