Adding correlation analysis

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -22,11 +22,15 @@
 % Results
 %	- Packet Loss by Country and Month
 %	- Latency by Country and Month
+%	- Correlation of Packet Loss and Latency
 %	- Routing with Starlink
 %	- TODO(robert): What more?
 
 % Latency
 \input{./chapters/latency/complete_time_range_2022to2024.tex}
+
+% Correlation of Packet Loss and Latency
+\input{./chapters/latency-packet-loss-correlation.tex}
 
 % Routing
 \input{./chapters/starlink_traceroutes.tex}
