Adding Chapter on motivation of networked satellite systems

--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -365,4 +365,35 @@
   url       = {https://doi.org/10.1109/ICNP49622.2020.9259357},
 }
 
+@InProceedings{DBLP:conf/tma/LaniewskiLMRA24,
+  author    = {Dominic Laniewski and Eric Lanfer and Bernd Meijerink and Roland van Rijswijk{-}Deij and Nils Aschenbruck},
+  booktitle = {8th Network Traffic Measurement and Analysis Conference, {TMA} 2024, Dresden, Germany, May 21-24, 2024},
+  title     = {WetLinks: {A} Large-Scale Longitudinal Starlink Dataset with Contiguous Weather Data},
+  year      = {2024},
+  pages     = {1--9},
+  publisher = {{IEEE}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/tma/LaniewskiLMRA24.bib},
+  doi       = {10.23919/TMA62044.2024.10558998},
+  timestamp = {Thu, 04 Jul 2024 15:45:25 +0200},
+  url       = {https://doi.org/10.23919/TMA62044.2024.10558998},
+}
+
+@InProceedings{DBLP:conf/pam/StevensIBD24,
+  author    = {Aleksandr Stevens and Blaise Iradukunda and Brad Bailey and Ramakrishnan Durairajan},
+  booktitle = {Passive and Active Measurement - 25th International Conference, {PAM} 2024, Virtual Event, March 11-13, 2024, Proceedings, Part {II}},
+  title     = {Can {LEO} Satellites Enhance the Resilience of Internet to Multi-hazard Risks?},
+  year      = {2024},
+  editor    = {Philipp Richter and Vaibhav Bajpai and Esteban Carisimo},
+  pages     = {170--195},
+  publisher = {Springer},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {14538},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/pam/StevensIBD24.bib},
+  doi       = {10.1007/978-3-031-56252-5\_9},
+  timestamp = {Fri, 29 Mar 2024 23:01:36 +0100},
+  url       = {https://doi.org/10.1007/978-3-031-56252-5\_9},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
