--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -10,6 +10,8 @@
 %	- Networked Satellite Systems
 %	- Starlink
 %	- Routing: ISLs & Bent-Pipes
+\input{./chapters/prerequisites/usecase_networked_satellite_systems.tex}
+\input{./chapters/prerequisites/satellite_network_simulators.tex}
 
 
 % Related Work
