Adding chapter on explaining sat com

--- a/tex/thesis/acronyms.tex
+++ b/tex/thesis/acronyms.tex
@@ -1,4 +1,4 @@
-\section{List of Acronyms}
+\chapter*{List of Acronyms}
 
 \begin{acronym}
 	\acro{ISLs}{Inter-Satellite Links}
@@ -6,8 +6,10 @@
 	\acro{ISP}{Internet Service Provider}
 	\acro{FTTH}{Fiber-to-the-home}
 	\acro{LEO}{Low-Earth~Orbit}
+	\acro{MEO}{Medium-Earth~Orbit}
 	\acro{GEO}{Geostationary~Orbit}
 	\acro{RTT}{Round-Trip-Time}
 	\acro{ASN}{Autonomous System Number}
 	\acro{PoP}{Point~of~Presence}
+	\acro{GS}{Ground~Station}
 \end{acronym}
