--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -396,4 +396,11 @@
   url       = {https://doi.org/10.1007/978-3-031-56252-5\_9},
 }
 
+@Book{pratt2019satellite,
+  author    = {Pratt, Timothy and Allnutt, Jeremy E},
+  publisher = {John Wiley \& Sons},
+  title     = {Satellite communications},
+  year      = {2019},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
