--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -9,9 +9,11 @@
 %	- Networked Satellite Systems
 %	- Starlink
 %	- Routing: ISLs & Bent-Pipes
-\input{./chapters/prerequisites/usecase_networked_satellite_systems.tex}
-\input{./chapters/prerequisites/satellite_network_simulators.tex}
+\chapter{Background}
 
+\input{./chapters/background/sat-com-explained.tex}
+\input{./chapters/background/usecase_networked_satellite_systems.tex}
+\input{./chapters/background/satellite_network_simulators.tex}
 
 % Related Work
 
