Writing chapter on probernumber-latency-packetloss correlation

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -28,15 +28,17 @@
 %	- Correlation of Packet Loss and Latency
 %	- Routing with Starlink
 %	- TODO(robert): What more?
+\chapter{Results}
 
 % Latency
-\input{./chapters/latency/complete_time_range_2022to2024.tex}
+\input{./chapters/results/latency/individual_days.tex}
+\input{./chapters/results/latency/complete_time_range_2022to2024.tex}
 
 % Correlation of Packet Loss and Latency
-\input{./chapters/latency-packet-loss-correlation.tex}
+\input{./chapters/results/latency-packet-loss-correlation.tex}
 
 % Routing
-\input{./chapters/starlink_traceroutes.tex}
+\input{./chapters/results/starlink_traceroutes.tex}
 
 % Limitations and Future Work
 %	- Limitation of Probe Availability (only selected ones on RIPE Atlas)
