--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -403,4 +403,19 @@
   year      = {2019},
 }
 
+@InProceedings{DBLP:conf/imc/PelsserCVB13,
+  author    = {Cristel Pelsser and Luca Cittadini and Stefano Vissicchio and Randy Bush},
+  booktitle = {Proceedings of the 2013 Internet Measurement Conference, {IMC} 2013, Barcelona, Spain, October 23-25, 2013},
+  title     = {From Paris to Tokyo: on the suitability of ping to measure latency},
+  year      = {2013},
+  editor    = {Konstantina Papagiannaki and P. Krishna Gummadi and Craig Partridge},
+  pages     = {427--432},
+  publisher = {{ACM}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/imc/PelsserCVB13.bib},
+  doi       = {10.1145/2504730.2504765},
+  timestamp = {Sat, 09 Apr 2022 12:37:49 +0200},
+  url       = {https://doi.org/10.1145/2504730.2504765},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
