Writing of methodology

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -21,6 +21,10 @@
 %	- Data Sources
 %	- Created Data Set
 %	- IPInfo
+\chapter{Methodology}
+
+\input{./chapters/methodology/methodology.tex}
+\input{./chapters/methodology/reproducability.tex}
 
 % Results
 %	- Packet Loss by Country and Month
