Wrote RQs chapter

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -3,6 +3,11 @@
 %	- RQs
 %	- Contributions
 %	- Outline
+\chapter{Introduction}
+
+\input{./chapters/1-introduction/introduction.tex}
+\input{./chapters/1-introduction/motivation.tex}
+\input{./chapters/1-introduction/research-questions.tex}
 
 
 % Background
@@ -11,9 +16,9 @@
 %	- Routing: ISLs & Bent-Pipes
 \chapter{Background}
 
-\input{./chapters/background/sat-com-explained.tex}
-\input{./chapters/background/usecase_networked_satellite_systems.tex}
-\input{./chapters/background/satellite_network_simulators.tex}
+\input{./chapters/2-background/sat-com-explained.tex}
+\input{./chapters/2-background/usecase-networked-satellite-systems.tex}
+\input{./chapters/2-background/satellite-network-simulators.tex}
 
 % Related Work
 
@@ -23,8 +28,8 @@
 %	- IPInfo
 \chapter{Methodology}
 
-\input{./chapters/methodology/methodology.tex}
-\input{./chapters/methodology/reproducability.tex}
+\input{./chapters/3-methodology/methodology.tex}
+\input{./chapters/3-methodology/reproducability.tex}
 
 % Results
 %	- Packet Loss by Country and Month
@@ -32,17 +37,17 @@
 %	- Correlation of Packet Loss and Latency
 %	- Routing with Starlink
 %	- TODO(robert): What more?
-\chapter{Results}
+\chapter{results}
 
 % Latency
-\input{./chapters/results/latency/individual_days.tex}
-\input{./chapters/results/latency/complete_time_range_2022to2024.tex}
+\input{./chapters/4-results/latency/individual-days.tex}
+\input{./chapters/4-results/latency/complete-time-range-2022to2024.tex}
 
 % Correlation of Packet Loss and Latency
-\input{./chapters/results/latency-packet-loss-correlation.tex}
+\input{./chapters/4-results/latency-packet-loss-correlation.tex}
 
 % Routing
-\input{./chapters/results/starlink_traceroutes.tex}
+\input{./chapters/4-results/starlink-traceroutes.tex}
 
 % Limitations and Future Work
 %	- Limitation of Probe Availability (only selected ones on RIPE Atlas)
