--- a/tex/thesis/packages_and_commands/user-defined_commands.tex
+++ b/tex/thesis/packages_and_commands/user-defined_commands.tex
@@ -1,1 +1,5 @@
 % This is where all the commands should go that you want to define yourself.
+\newtcolorbox[auto counter,number within=section]{rqbox}[2][]{%
+	fonttitle=\bfseries, title=Research~Question #2
+}
+
