Add section on number of satellites

--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -32,12 +32,16 @@
 \input{./chapters/3-methodology/reproducability.tex}
 
 % Results
+%	- Satellite Constellations
 %	- Packet Loss by Country and Month
 %	- Latency by Country and Month
 %	- Correlation of Packet Loss and Latency
 %	- Routing with Starlink
 %	- TODO(robert): What more?
-\chapter{results}
+\chapter{Results}
+
+% Satellites
+\input{./chapters/4-results/satellites/satellite-constellations.tex}
 
 % Latency
 \input{./chapters/4-results/latency/individual-days.tex}
