--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -418,4 +418,13 @@
   url       = {https://doi.org/10.1145/2504730.2504765},
 }
 
+@Misc{Richter2024,
+  author    = {Richter, Robert},
+  title     = {List of Satellites as of 05.09.2024},
+  year      = {2024},
+  doi       = {10.13140/RG.2.2.35658.38080},
+  language  = {en},
+  publisher = {Unpublished},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
