--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -418,4 +418,11 @@
   url       = {https://doi.org/10.1145/2504730.2504765},
 }
 
+@Unpublished{,
+  author = {Thomas Kohnmann},
+  title  = {Everything you need to know about Project Kuiper, Amazon’s satellite broadband network},
+  month  = jun,
+  year   = {2024},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
