--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -18,6 +18,7 @@
 
 \input{./chapters/2-background/sat-com-explained.tex}
 \input{./chapters/2-background/usecase-networked-satellite-systems.tex}
+\input{./chapters/2-background/networked-satellite-isps.tex}
 \input{./chapters/2-background/satellite-network-simulators.tex}
 
 % Related Work
