--- a/tex/thesis/packages_and_commands/additional_packages.tex
+++ b/tex/thesis/packages_and_commands/additional_packages.tex
@@ -1,3 +1,4 @@
 % Add additional packages you would like to use here.
 \usepackage[printonlyused,withpage]{acronym}
 \usepackage{tcolorbox}
+\usepackage{booktabs}
