Adding a takeaway about latency and packet loss.

--- a/tex/thesis/packages_and_commands/user-defined_commands.tex
+++ b/tex/thesis/packages_and_commands/user-defined_commands.tex
@@ -3,3 +3,6 @@
 	fonttitle=\bfseries, title=Research~Question #2
 }
 
+\newtcolorbox[auto counter,number within=section]{takeaway}[2][]{%
+	fonttitle=\bfseries, title=Research~Question #1 #2
+}
