--- a/tex/thesis/packages_and_commands/user-defined_commands.tex
+++ b/tex/thesis/packages_and_commands/user-defined_commands.tex
@@ -4,5 +4,5 @@
 }
 
 \newtcolorbox[auto counter,number within=section]{takeaway}[2][]{%
-	fonttitle=\bfseries, title=Research~Question #1 #2
+	fonttitle=\bfseries, title=Takeaway: #2
 }
