Allowing to run satellite constellation analysis from parquet files

--- a/src/db-controller/notebooks/satellite-constellations.ipynb
+++ b/src/db-controller/notebooks/satellite-constellations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "deb49a28-05e3-43aa-96c9-470836a4454b",
    "metadata": {
     "tags": []
@@ -15,24 +15,32 @@
     "from sqlalchemy import create_engine\n",
     "from datetime import datetime\n",
     "\n",
+    "file_data = \"./parquet/satellite_data.parquet\"\n",
     "engine = create_engine(\"postgresql://postgres:postgres@vm-robert-richter.cloud.dhclab.i.hpi.de:5432/postgres\") # postgresql://user:password@host:port/databasename\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "663f034f-8474-40d8-9005-3dc9b2a45b5c",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df = pd.read_sql_query(\"SELECT * FROM satellite_data;\", con=engine)"
+    "# Directly from DB or from Parquet file.\n",
+    "from_db = False\n",
+    "\n",
+    "df = pd.DataFrame()\n",
+    "if from_db: # Use data directly from database via network connection\n",
+    "    df = pd.read_sql_query(\"SELECT * FROM satellite_data;\", con=engine)\n",
+    "else: # Use data from parquet file\n",
+    "    df = pd.read_parquet(file_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8793ca70-40d5-402a-9443-4b873009f2a2",
    "metadata": {
     "tags": []
@@ -190,7 +198,7 @@
        "[59506 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ec9c3d5d-6f0d-4f3a-898e-dc94cafe53a5",
    "metadata": {
     "tags": []
@@ -214,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "381ae5b1-0072-4d59-990a-a379ca310339",
    "metadata": {
     "tags": []
@@ -359,7 +367,7 @@
        "[59506 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "4ca96f3b-e40b-4ad8-b3e6-b43dfa32c32c",
    "metadata": {
     "tags": []
@@ -401,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "b63bc124-dab7-41f6-8891-566e7571ae98",
    "metadata": {
     "tags": []
@@ -435,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "3bc1e494-234a-4b39-9950-418063f16040",
    "metadata": {
     "tags": []
@@ -455,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "7769fb95-9d35-4a15-8f51-1ac5192b3a00",
    "metadata": {
     "tags": []
@@ -2120,7 +2128,7 @@
        "[54 rows x 68 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2132,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "78461381-839b-42fb-9585-3d8c53981fee",
    "metadata": {},
    "outputs": [
@@ -2412,7 +2420,7 @@
        "[7 rows x 25 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2439,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "3384125d-5537-4287-b254-efdc198fbf56",
    "metadata": {
     "tags": []
@@ -2470,6 +2478,14 @@
     "plt.tight_layout()\n",
     "plt.savefig('satellite-dev.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ce35cd6-150e-48f7-bb30-0d2b44496970",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
