--- a/src/db-controller/notebooks/packet_loss.ipynb
+++ b/src/db-controller/notebooks/packet_loss.ipynb
@@ -491,7 +491,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "45591f41-4a27-408d-8e41-147176a62cc3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
