[Thesis] Improving CDF Plots for Latency (#200)

--- a/src/db-controller/notebooks/latency-cdf.ipynb
+++ b/src/db-controller/notebooks/latency-cdf.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "df2022 = filter_for_range(df, 'timestamp', start2022, start2023)\n",
     "df2023 = filter_for_range(df, 'timestamp', start2023, start2024)\n",
-    "df2024 = filter_for_range(df, 'timestamp', min, future)\n",
+    "df2024 = filter_for_range(df, 'timestamp', start2024, future)\n",
     "def per_country_cdf(df, c, title):\n",
     "    rt_column = [v for v in df['rt'].tolist() if v > 0]\n",
     "    log_rts = np.log(rt_column)\n",
@@ -75,15 +75,18 @@
     "    ax.ecdf(log_rts)\n",
     "    ax.set_xlabel('CDF of Latencies in ms')\n",
     "\n",
-    "    xticks_locations = np.arange(2, np.max(log_rts), 0.5)\n",
-    "    xticks_labels = np.round(np.exp(xticks_locations), 0)\n",
+    "    pred = 1200\n",
+    "    xticks_locations = [v for v in np.arange(2, np.max(log_rts), 0.5) if v < math.log(pred)]\n",
+    "    xticks_labels = [str(int(v)) for v in np.round(np.exp(xticks_locations), 0) if v < pred]\n",
     "\n",
     "    plt.xticks(xticks_locations, xticks_labels)\n",
     "    plt.yticks(np.arange(0, 1, 0.1))\n",
-    "    ax.tick_params(axis='both', which='major', labelsize=7)\n",
+    "    ax.tick_params(axis='both', which='major', labelsize=10)\n",
+    "    ax.spines[['right', 'top']].set_visible(False)\n",
     "    plt.title(title)\n",
     "    plt.savefig(results_dir + \"/\" + title.lower().replace(\" \", \"_\") + \".pdf\")\n",
     "    plt.show()\n",
+    "    plt.clf()\n",
     "\n",
     "if not os.path.isdir(results_dir): os.mkdir(results_dir)\n",
     "for country in set(df['country'].tolist()):\n",
@@ -91,6 +94,14 @@
     "    per_country_cdf(df2023, country, 'Latencies in 2023 of Starlink Probes in ' + country_name(country))\n",
     "    per_country_cdf(df2024, country, 'Latencies in 2024 of Starlink Probes in ' + country_name(country))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c77c9e6-5cfa-48ef-a5de-ef742e5134ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
