Adding todos for traceroute chapter

--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -256,35 +256,19 @@
   url        = {https://www.esat.kuleuven.be/cosic/blog/dumping-and-extracting-the-spacex-starlink-user-terminal-firmware/},
 }
 
-@article{Hauri2020,
-  author = {Yannick Hauri and Debopam Bhattacherjee and Manuel Grossmann and
-            Ankit Singla},
-  journal = {HotNets 2020 - Proceedings of the 19th ACM Workshop on Hot Topics
-             in Networks},
-  title = {"Internet from Space" without Inter-satellite Links},
-  year = {2020},
-  month = {11},
-  pages = {205-211},
-  abstract = {Buoyed by advances in space technology, several firms are planning
-              satellite constellations to offer broadband Internet service. While
-              these developments are happening quickly, there are also many
-              uncertainties about the design of these networks. A key open
-              question is whether or not they will incorporate direct
-              connectivity between satellites, instead of only ground-satellite
-              connections. We compare the network behavior resulting from the two
-              outcomes of that question. Our analysis shows that inter-satellite
-              links substantially reduce the temporal variations in latency, add
-              greater resilience to weather, and could yield more than 3x the
-              throughput achieved without such links. Thus, whether this one
-              design element pans out could have a large bearing on the
-              performance, reliability, and economics of these networks.},
-  bdsk-url-1 = {https://dl.acm.org/doi/10.1145/3422604.3425938},
-  bdsk-url-2 = {https://doi.org/10.1145/3422604.3425938},
-  doi = {10.1145/3422604.3425938},
-  isbn = {9781450381451},
-  keywords = {Bent-Pipe,ISL,LEO,Ground-Satellite Connectivity},
-  publisher = {Association for Computing Machinery, Inc},
-  url = {https://dl.acm.org/doi/10.1145/3422604.3425938},
+@InProceedings{DBLP:conf/hotnets/HauriBGS20,
+  author    = {Yannick Hauri and Debopam Bhattacherjee and Manuel Grossmann and Ankit Singla},
+  booktitle = {HotNets '20: The 19th {ACM} Workshop on Hot Topics in Networks, Virtual Event, USA, November 4-6, 2020},
+  title     = {"Internet from Space" without Inter-satellite Links},
+  year      = {2020},
+  editor    = {Ben Y. Zhao and Heather Zheng and Harsha V. Madhyastha and Venkat N. Padmanabhan},
+  pages     = {205--211},
+  publisher = {{ACM}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/hotnets/HauriBGS20.bib},
+  doi       = {10.1145/3422604.3425938},
+  timestamp = {Mon, 20 Jun 2022 09:15:37 +0200},
+  url       = {https://doi.org/10.1145/3422604.3425938},
 }
 
 @inproceedings{DBLP:conf/www/MohanFCBRMO24,
