--- a/tex/thesis/packages_and_commands/additional_packages.tex
+++ b/tex/thesis/packages_and_commands/additional_packages.tex
@@ -2,4 +2,4 @@
 \usepackage[printonlyused,withpage]{acronym}
 \usepackage[skins]{tcolorbox}
 \usepackage{booktabs}
-\usepackage{todo}
+\usepackage{todonotes}
