--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -462,4 +462,19 @@
   year = {2024},
 }
 
+@InProceedings{DBLP:conf/sigcomm/VasishtSC21,
+  author    = {Deepak Vasisht and Jayanth Shenoy and Ranveer Chandra},
+  booktitle = {{ACM} {SIGCOMM} 2021 Conference, Virtual Event, USA, August 23-27, 2021},
+  title     = {{L2D2:} low latency distributed downlink for {LEO} satellites},
+  year      = {2021},
+  editor    = {Fernando A. Kuipers and Matthew C. Caesar},
+  pages     = {151--164},
+  publisher = {{ACM}},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/conf/sigcomm/VasishtSC21.bib},
+  doi       = {10.1145/3452296.3472932},
+  timestamp = {Sun, 02 Oct 2022 16:15:05 +0200},
+  url       = {https://doi.org/10.1145/3452296.3472932},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
