Adding chapters on measurement platforms

--- a/tex/thesis/acronyms.tex
+++ b/tex/thesis/acronyms.tex
@@ -12,4 +12,6 @@
 	\acro{ASN}{Autonomous System Number}
 	\acro{PoP}{Point~of~Presence}
 	\acro{GS}{Ground~Station}
+	\acro{CFR}{Cloudflare Radar}
+	\acro{IQI}{Internet Quality Index}
 \end{acronym}
