--- a/tex/thesis/content.tex
+++ b/tex/thesis/content.tex
@@ -31,6 +31,7 @@
 
 \input{./chapters/3-methodology/methodology.tex}
 \input{./chapters/3-methodology/reproducability.tex}
+\input{./chapters/3-methodology/measurement-platforms.tex}
 
 % Results
 %	- Satellite Constellations
