Adding chart on locations of Cloudflare servers and root servers

--- a/tex/thesis/references/references.bib
+++ b/tex/thesis/references/references.bib
@@ -493,4 +493,22 @@
   url       = {https://blog.cloudflare.com/introducing-radar-internet-quality-page/},
 }
 
+@Misc{CloudflareGlobalNetwork2024,
+  author       = {Cloudflare},
+  howpublished = {Cloudflare Website},
+  month        = sep,
+  title        = {The Global Cloudflare-Network},
+  year         = {2024},
+}
+
+@Misc{rootservers092024,
+  author       = {root-servers.org},
+  howpublished = {Website},
+  month        = sep,
+  title        = {Root Servers},
+  year         = {2024},
+  keywords     = {Map,Root Servers},
+  url          = {https://root-servers.org/},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
